--- a/dccwebproject/loginapp/templates/loginapp/customerlist1.html
+++ b/dccwebproject/loginapp/templates/loginapp/customerlist1.html
@@ -434,7 +434,7 @@
                                 <td>{{list.customer_city}}</td>
                                   <td>{{list.customer_email}}</td>
                                <td>{{list.cutomer_fax}}</td>
-                               <td><a href="{% url 'loginapp:customerupdate' list.id %}">update</a></td>
+                               <td><a href="{% url 'loginapp:customerupdates' list.id %}">update</a></td>
                              </tr>
                                  {%endfor%}
                            </table>
