--- a/dccwebproject/loginapp/templates/loginapp/enggdetail.html
+++ b/dccwebproject/loginapp/templates/loginapp/enggdetail.html
@@ -312,11 +312,7 @@
 
           </a>
           </li>
-          <li>
-            <a href="{% url 'loginapp:regcustom' %}">
-          <i class="fa fa-files-o"></i> <span>Add Customer</span>
-        </a>
-          </li>
+
           <li>
           <a href="{% url 'loginapp:enggmap' %}">
             <i class="fa fa-files-o"></i> <span>Track Engineers</span>
@@ -417,7 +413,7 @@
                              </tr>
                              <tr>
                                <td>{{engg.id}}</td>
-                               <td><img src="{{engg.engg_pic.url}}"  height="10%"></td>
+                               <td><img src="{% url 'db_file_storage.get_file' %}?name={{ engg.engg_pic }}"  height="10%"></td>
                                <td>{{engg.engg_name}}</td>
                                <td>{{engg.engg_contact_number}}</td>
                                 <td>{{engg.engg_city}}</td>
