--- a/dccwebproject/loginapp/templates/loginapp/index.html
+++ b/dccwebproject/loginapp/templates/loginapp/index.html
@@ -489,13 +489,25 @@
             </div>
           </div>
           <!-- /.nav-tabs-custom -->
-
+          <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+          <script src="//cdnjs.cloudflare.com/ajax/libs/reconnecting-websocket/1.0.0/reconnecting-websocket.min.js"></script>
+          <script src="{% static 'loginapp/js/main.js' %}"></script>
           <!-- Chat box -->
+          <div>
+            <ul class="rooms">
+      {% for room in rooms %}
+          <li class="room-link" data-room-id="{{ room.id }}">{{ room }}</li>
+      {% empty %}
+          <p class="empty">No chat rooms defined. Maybe make some in the <a href="{% url 'loginapp:adminchat' %}">admin</a>?</p>
+      {% endfor %}
+  </ul>
+          </div>
           <div class="box box-success">
             <div class="box-header">
               <i class="fa fa-comments-o"></i>
 
               <h3 class="box-title">Chat</h3>
+
 
               <div class="box-tools pull-right" data-toggle="tooltip" title="Status">
                 <div class="btn-group" data-toggle="btn-toggle">
@@ -515,9 +527,7 @@
                     <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> 2:15</small>
                     Mike Doe
                   </a>
-                  I would like to meet you to discuss the latest news about
-                  the arrival of the new theme. They say it is going to be one the
-                  best themes on the market
+
                 </p>
                 <div class="attachment">
                   <h4>Attachments:</h4>
@@ -542,9 +552,7 @@
                     <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> 5:15</small>
                     Admin
                   </a>
-                  I would like to meet you to discuss the latest news about
-                  the arrival of the new theme. They say it is going to be one the
-                  best themes on the market
+                  
                 </p>
               </div>
               <!-- /.item -->
