--- a/dccwebproject/loginapp/templates/loginapp/calllist1.html
+++ b/dccwebproject/loginapp/templates/loginapp/calllist1.html
@@ -329,6 +329,16 @@
           </a>
         </li>
         <li>
+        <a href="{% url 'loginapp:stockentry' %}">
+          <i class="fa fa-files-o"></i> <span>Stock Entry</span>
+        </a>
+        </li>
+        <li>
+        <a href="{% url 'loginapp:stocklist' %}">
+          <i class="fa fa-files-o"></i> <span>Stock List</span>
+        </a>
+        </li>
+        <li>
         <a href="{% url 'loginapp:getcoadmin' %}">
           <i class="fa fa-files-o"></i> <span>Coadmin List</span>
         </a>
@@ -394,6 +404,16 @@
           <li class="active">Dashboard</li>
         </ol>
       </section>
+      <div class="col-sm-2">
+        <a href ="{% url 'loginapp:callallocateexport_xls'%}"><button type="submit" class="btn btn-primary btn-block btn-flat">export to excel</button></a>
+        </div>
+        <div class="col-sm-2">
+        <form method="post" action="{% url 'loginapp:callallocateimport_xls' %}" enctype="multipart/form-data">
+     {% csrf_token %}
+     <input type="file" name="myfile">
+     <button type="submit" class="btn btn-primary btn-block btn-flat">Upload</button>
+   </form>
+ </div>
             <div class="container">
               <div class="row">
                 <div class="register-logo ">
