--- a/dccwebproject/loginapp/templates/loginapp/engglist1.html
+++ b/dccwebproject/loginapp/templates/loginapp/engglist1.html
@@ -388,9 +388,15 @@
         </ol>
       </section>
       <div class="col-sm-2">
-        <a href ="{% url 'loginapp:export_xls'%}"><button type="submit" class="btn btn-primary btn-block btn-flat">export to excel</button></a>
-
+        <a href ="{% url 'loginapp:enggexport_xls'%}"><button type="submit" class="btn btn-primary btn-block btn-flat">export to excel</button></a>
         </div>
+        <div class="col-sm-2">
+        <form method="post" action="{% url 'loginapp:enggimport_xls' %}" enctype="multipart/form-data">
+     {% csrf_token %}
+     <input type="file" name="myfile">
+     <button type="submit" class="btn btn-primary btn-block btn-flat">Upload</button>
+   </form>
+ </div>
             <div class="container">
               <div class="register-logo ">
                 <b>Engineers List</b>
