--- a/dccwebproject/loginapp/templates/loginapp/register1.html
+++ b/dccwebproject/loginapp/templates/loginapp/register1.html
@@ -330,6 +330,16 @@
         <i class="fa fa-files-o"></i> <span>Track Engineers</span>
       </a>
     </li>
+    <li>
+    <a href="{% url 'loginapp:stockentry' %}">
+      <i class="fa fa-files-o"></i> <span>Stock Entry</span>
+    </a>
+    </li>
+    <li>
+    <a href="{% url 'loginapp:stocklist' %}">
+      <i class="fa fa-files-o"></i> <span>Stock List</span>
+    </a>
+    </li>
       <li>
       <a href="{% url 'loginapp:getcoadmin' %}">
         <i class="fa fa-files-o"></i> <span>Coadmin List</span>
@@ -421,7 +431,7 @@
                   });
                 </script>
 
-                
+
                 <div class=" register-box-body ">
                   <p class="login-box-msg">Register a new Engg</p>
 
