--- a/dccwebproject/loginapp/templates/loginapp/stockdetail.html
+++ b/dccwebproject/loginapp/templates/loginapp/stockdetail.html
@@ -328,6 +328,16 @@
             <i class="fa fa-files-o"></i> <span>Track Engineers</span>
           </a>
         </li>
+        <li>
+        <a href="{% url 'loginapp:stockentry' %}">
+          <i class="fa fa-files-o"></i> <span>Stock Entry</span>
+        </a>
+        </li>
+        <li>
+        <a href="{% url 'loginapp:stocklist' %}">
+          <i class="fa fa-files-o"></i> <span>Stock List</span>
+        </a>
+        </li>
         <li class="active">
         <a href="{% url 'loginapp:getcoadmin' %}">
           <i class="fa fa-files-o"></i> <span>Coadmin List</span>
@@ -439,7 +449,7 @@
                                <th>Model Id</th>
                                <th>Description</th>
                                <th>warranty</th>
-                            
+
                              </tr>
                              <tr>
                                <td>{{stock.id}}</td>
