--- a/dccwebproject/loginapp/templates/loginapp/callallocate_update1.html
+++ b/dccwebproject/loginapp/templates/loginapp/callallocate_update1.html
@@ -328,6 +328,16 @@
           </a>
         </li>
         <li>
+        <a href="{% url 'loginapp:stockentry' %}">
+          <i class="fa fa-files-o"></i> <span>Stock Entry</span>
+        </a>
+        </li>
+        <li>
+        <a href="{% url 'loginapp:stocklist' %}">
+          <i class="fa fa-files-o"></i> <span>Stock List</span>
+        </a>
+        </li>
+        <li>
         <a href="{% url 'loginapp:getcoadmin' %}">
           <i class="fa fa-files-o"></i> <span>Coadmin List</span>
         </a>
