--- a/dccwebproject/loginapp/templates/loginapp/coadmin_list.html
+++ b/dccwebproject/loginapp/templates/loginapp/coadmin_list.html
@@ -328,6 +328,16 @@
             <i class="fa fa-files-o"></i> <span>Track Engineers</span>
           </a>
         </li>
+        <li>
+        <a href="{% url 'loginapp:stockentry' %}">
+          <i class="fa fa-files-o"></i> <span>Stock Entry</span>
+        </a>
+        </li>
+        <li>
+        <a href="{% url 'loginapp:stocklist' %}">
+          <i class="fa fa-files-o"></i> <span>Stock List</span>
+        </a>
+        </li>
           <li class="active">
           <a href="{% url 'loginapp:getcoadmin' %}">
             <i class="fa fa-files-o"></i> <span>Coadmin List</span>
@@ -394,7 +404,16 @@
           <li class="active">Dashboard</li>
         </ol>
       </section>
-
+      <div class="col-sm-2">
+        <a href ="{% url 'loginapp:coadminexport_xls'%}"><button type="submit" class="btn btn-primary btn-block btn-flat">export to excel</button></a>
+        </div>
+        <div class="col-sm-2">
+        <form method="post" action="{% url 'loginapp:coadminimport_xls' %}" enctype="multipart/form-data">
+     {% csrf_token %}
+     <input type="file" name="myfile">
+     <button type="submit" class="btn btn-primary btn-block btn-flat">Upload</button>
+   </form>
+ </div>
 
         <div class="row ">
           <!-- Left col -->
