--- a/dccwebproject/loginapp/templates/loginapp/coadmin_update.html
+++ b/dccwebproject/loginapp/templates/loginapp/coadmin_update.html
@@ -326,6 +326,16 @@
       <i class="fa fa-files-o"></i> <span>Track Engineers</span>
     </a>
   </li>
+  <li>
+  <a href="{% url 'loginapp:stockentry' %}">
+    <i class="fa fa-files-o"></i> <span>Stock Entry</span>
+  </a>
+  </li>
+  <li>
+  <a href="{% url 'loginapp:stocklist' %}">
+    <i class="fa fa-files-o"></i> <span>Stock List</span>
+  </a>
+  </li>
   <li class="active">
   <a href="{% url 'loginapp:getcoadmin' %}">
     <i class="fa fa-files-o"></i> <span>Coadmin List</span>
