--- a/dccwebproject/loginapp/templates/loginapp/product_form.html
+++ b/dccwebproject/loginapp/templates/loginapp/product_form.html
@@ -1,11 +1,12 @@
 {%load staticfiles%}
+{%load bootstrap%}
 <!DOCTYPE html>
 <html>
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Engineers List</title>
+  <title>Co-Admin Registration</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.7 -->
@@ -50,11 +51,11 @@
 
     <header class="main-header">
       <!-- Logo -->
-      <a href="#" class="logo">
+      <a href="{% url 'loginapp:dash1' %}" class="logo">
         <!-- mini logo for sidebar mini 50x50 pixels -->
-        <span class="logo-mini"><b>Co-Admin</b></span>
+        <span class="logo-mini"><b>Admin</b></span>
         <!-- logo for regular state and mobile devices -->
-        <span class="logo-lg"><b>Co-Admin</b></span>
+        <span class="logo-lg"><b>Admin</b></span>
       </a>
       <!-- Header Navbar: style can be found in header.less -->
       <nav class="navbar navbar-static-top">
@@ -76,8 +77,7 @@
                 <li>
                   <!-- inner menu: contains the actual data -->
                   <ul class="menu">
-                    <li>
-                      <!-- start message -->
+                    <li><!-- start message -->
                       <a href="#">
                         <div class="pull-left">
                           <img src="{% static 'loginapp/dist/img/user2-160x160.jpg' %}" class="img-circle" alt="User Image">
@@ -196,60 +196,60 @@
                 <li>
                   <!-- inner menu: contains the actual data -->
                   <ul class="menu">
-                    <li>
-                      <!-- Task item -->
+                    <li><!-- Task item -->
                       <a href="#">
                         <h3>
                           Design some buttons
                           <small class="pull-right">20%</small>
                         </h3>
                         <div class="progress xs">
-                          <div class="progress-bar progress-bar-aqua" style="width: 20%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+                          <div class="progress-bar progress-bar-aqua" style="width: 20%" role="progressbar"
+                               aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
                             <span class="sr-only">20% Complete</span>
                           </div>
                         </div>
                       </a>
                     </li>
                     <!-- end task item -->
-                    <li>
-                      <!-- Task item -->
+                    <li><!-- Task item -->
                       <a href="#">
                         <h3>
                           Create a nice theme
                           <small class="pull-right">40%</small>
                         </h3>
                         <div class="progress xs">
-                          <div class="progress-bar progress-bar-green" style="width: 40%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+                          <div class="progress-bar progress-bar-green" style="width: 40%" role="progressbar"
+                               aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
                             <span class="sr-only">40% Complete</span>
                           </div>
                         </div>
                       </a>
                     </li>
                     <!-- end task item -->
-                    <li>
-                      <!-- Task item -->
+                    <li><!-- Task item -->
                       <a href="#">
                         <h3>
                           Some task I need to do
                           <small class="pull-right">60%</small>
                         </h3>
                         <div class="progress xs">
-                          <div class="progress-bar progress-bar-red" style="width: 60%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+                          <div class="progress-bar progress-bar-red" style="width: 60%" role="progressbar"
+                               aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
                             <span class="sr-only">60% Complete</span>
                           </div>
                         </div>
                       </a>
                     </li>
                     <!-- end task item -->
-                    <li>
-                      <!-- Task item -->
+                    <li><!-- Task item -->
                       <a href="#">
                         <h3>
                           Make beautiful transitions
                           <small class="pull-right">80%</small>
                         </h3>
                         <div class="progress xs">
-                          <div class="progress-bar progress-bar-yellow" style="width: 80%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+                          <div class="progress-bar progress-bar-yellow" style="width: 80%" role="progressbar"
+                               aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
                             <span class="sr-only">80% Complete</span>
                           </div>
                         </div>
@@ -267,7 +267,7 @@
             <li class="dropdown user user-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <img src="{% static 'loginapp/dist/img/user2-160x160.jpg' %}" class="user-image" alt="User Image">
-                <span class="hidden-xs">Co-Admin</span>
+                <span class="hidden-xs">Admin</span>
               </a>
               <ul class="dropdown-menu">
                 <!-- User image -->
@@ -299,48 +299,64 @@
     <aside class="main-sidebar">
       <!-- sidebar: style can be found in sidebar.less -->
       <section class="sidebar">
+        <!-- Sidebar user panel -->
+
 
         <!-- sidebar menu: : style can be found in sidebar.less -->
         <ul class="sidebar-menu" data-widget="tree">
           <li class="header">MAIN NAVIGATION</li>
           <li class="treeview">
-            <li><a href="{% url 'loginapp:dash2' %}"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+              <li><a href="{% url 'loginapp:dash1' %}"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
           </li>
-          <li>
-            <a href="{% url 'loginapp:regengg' %}">
-            <i class="fa fa-files-o"></i> <span>Add Engineer</span>
-
-          </a>
-          </li>
-
-          <li>
-          <a href="{% url 'loginapp:enggmap' %}">
-            <i class="fa fa-files-o"></i> <span>Track Engineers</span>
-          </a>
-        </li>
-
           <li class="active">
-          <a href="{% url 'loginapp:getengg' %}">
-            <i class="fa fa-files-o"></i> <span>Engineers List</span>
+          <a href="{% url 'loginapp:regcoadmin' %}">
+            <i class="fa fa-files-o"></i> <span>Add co-Admin</span>
           </a>
         </li>
-
-
         <li>
-        <a href="{% url 'loginapp:getcalllist' %}">
-          <i class="fa fa-files-o"></i> <span>Call List</span>
+        <a href="{% url 'loginapp:regenggs' %}">
+          <i class="fa fa-files-o"></i> <span>Add Engineers</span>
         </a>
-        </li>
+      </li>
+      <li>
+      <a href="{% url 'loginapp:regcustoms' %}">
+        <i class="fa fa-files-o"></i> <span>Add Customer</span>
+      </a>
+    </li>
+    <li>
+    <a href="{% url 'loginapp:enggmaps' %}">
+      <i class="fa fa-files-o"></i> <span>Track Engineers</span>
+    </a>
+  </li>
+    <li>
+    <a href="{% url 'loginapp:getcoadmin' %}">
+      <i class="fa fa-files-o"></i> <span>Coadmin List</span>
+    </a>
+  </li>
+    <li>
+    <a href="{% url 'loginapp:getenggs' %}">
+      <i class="fa fa-files-o"></i> <span>Engineers List</span>
+    </a>
+  </li>
+  <li>
+  <a href="{% url 'loginapp:getcustomers' %}">
+    <i class="fa fa-files-o"></i> <span>Customer List</span>
+  </a>
+  </li>
 
-        <li>
-        <a href="{% url 'loginapp:callallocation' %}">
-          <i class="fa fa-files-o"></i> <span>Call Allocation</span>
-        </a>
-        </li>
+  <li>
+  <a href="{% url 'loginapp:getcalllists' %}">
+    <i class="fa fa-files-o"></i> <span>Call List</span>
+  </a>
+  </li>
 
-
+  <li>
+  <a href="{% url 'loginapp:callallocations' %}">
+    <i class="fa fa-files-o"></i> <span>Call Allocation</span>
+  </a>
+  </li>
           <li>
-            <a href="{% url 'loginapp:calendar' %}">
+            <a href="{% url 'loginapp:calendars' %}">
               <i class="fa fa-calendar"></i> <span>Calendar</span>
               <span class="pull-right-container">
                 <small class="label pull-right bg-red">3</small>
@@ -358,7 +374,8 @@
               </span>
             </a>
           </li>
-          </section>
+
+      </section>
       <!-- /.sidebar -->
     </aside>
 
@@ -368,70 +385,96 @@
       <section class="content-header">
         <h1>
           Dashboard
-          <small>Control panel</small>
+          <small>Registration</small>
         </h1>
         <ol class="breadcrumb">
-          <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-          <li class="active">Dashboard</li>
+          <li><a href="{% url 'loginapp:dash1' %}"><i class="fa fa-dashboard"></i> Home</a></li>
+          <li class="active">Product List</li>
         </ol>
       </section>
+
             <div class="container">
-              <div class="register-logo ">
-                <a href="#"><b>Engineer List</b></a>
-              </div>
               <div class="row">
-                     <div class="col-xs-12">
-                       <div class="box">
-                         <div class="box-header">
-                           <h3 class="box-title">Engineers List</h3>
+                <div class="register-logo ">
+                  <a href="{% url 'loginapp:dash1' %}"><b>Product list</b></a>
+                </div>
+                <div class=" register-box-body ">
+                  <p class="container">Add Customer Products</p>
 
-                           <div class="box-tools">
-                                <form method="GET" action="">
-                             <div class="input-group input-group-sm" style="width: 150px;">
+                  <form method="post" action="{% url 'loginapp:productsave' %}" enctype="multipart/form-data">
+                    {% csrf_token %}
 
-                               <input type="text" name="q" class="form-control pull-right" placeholder="Search">
-                               <div class="input-group-btn">
-                                 <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
-                               </div>
+                    <div class="col-lg-12">
 
-                               </div>
-                             </form>
-                           </div>
-                         </div>
-                         <!-- /.box-header -->
-                         <div class="box-body table-responsive no-padding">
 
-                           <table class="table table-hover">
-                             <tr>
-                               <th>ID</th>
-                               <th>User</th>
-                               <th>Contact</th>
-                               <th>City</th>
-                                <th>Branch Code</th>
-                               <th>Status</th>
-                               <th>Address</th>
-                                <th>Edit</th>
-                             </tr>
-                            
-                           </table>
 
-                         </div>
-                         <!-- /.box-body -->
-                       </div>
-                       <!-- /.box -->
-                     </div>
-                   </div>
+
+                        {{form|bootstrap}}
+
+
+
+
+                    </div>
+
+                    <div class="row">
+
+
+                      <div class="col-lg-4">
+
+                      </div>
+                      <div class="col-lg-4 ">
+                        <button type="submit" class="btn btn-primary btn-block btn-flat">Save</button>
+                      </div>
+                      <!-- /.col -->
+                      <div class="col-lg-12">
+                        <div class="box-body table-responsive no-padding">
+
+                          <table class="table table-hover">
+                            <tr>
+                              <th>ID</th>
+                              <th>Product Name</th>
+                              <th>Delete</th>
+
+                            </tr>
+                             {% for list in prodobj %}
+                            <tr>
+                              <td>{{list.id}}</td>
+                              <td>{{list.product_name}}</td>
+                            </tr>
+                                {%endfor%}
+                          </table>
+
+                        </div>
+                      </div>
+                      <!-- /.col -->
+                    </div>
+
+                  </form>
+
+                </div>
+                <!-- /.form-box -->
+              </div>
+            </div>
+            <!-- /.register-box -->
+
+
+
+          </section>
+          <!-- /.Left col -->
+
+        </div>
+        <!-- /.row (main row) -->
 
       </section>
       <!-- /.content -->
     </div>
-  </div>
     <!-- /.content-wrapper -->
     <footer class="main-footer">
       <div class="pull-right hidden-xs">
         <b>Version</b> 1.1.0
       </div>
-      <strong>Copyright &copy; 2017-2018 <a href="https://www.ganakcomputers.com/">Ganak Computers</a>.</strong> All rights reserved.
+      <strong>Copyright &copy; 2017-2018 <a href="https://www.ganakcomputers.com/">Ganak Computers</a>.</strong> All rights
+      reserved.
     </footer>
 
     <!-- Control Sidebar -->
@@ -677,11 +720,11 @@
   <!-- AdminLTE for demo purposes -->
   <script src="{% static 'loginapp/dist/js/demo.js' %}"></script>
   <script>
-    $(function() {
+    $(function () {
       $('input').iCheck({
         checkboxClass: 'icheckbox_square-blue',
         radioClass: 'iradio_square-blue',
-        increaseArea: '20%' /* optional */
+        increaseArea: '20%', /* optional */
       });
     });
   </script>
