--- a/dccwebproject/loginapp/templates/loginapp/stockentry.html
+++ b/dccwebproject/loginapp/templates/loginapp/stockentry.html
@@ -335,6 +335,11 @@
       <i class="fa fa-files-o"></i> <span>Stock Entry</span>
     </a>
     </li>
+    <li>
+    <a href="{% url 'loginapp:stocklist' %}">
+      <i class="fa fa-files-o"></i> <span>Stock List</span>
+    </a>
+    </li>
       <li>
       <a href="{% url 'loginapp:getcoadmin' %}">
         <i class="fa fa-files-o"></i> <span>Coadmin List</span>
