--- a/dccwebproject/loginapp/templates/loginapp/engglist1.html
+++ b/dccwebproject/loginapp/templates/loginapp/engglist1.html
@@ -390,13 +390,18 @@
       <div class="col-sm-2">
         <a href ="{% url 'loginapp:enggexport_xls'%}"><button type="submit" class="btn btn-primary btn-block btn-flat">export to excel</button></a>
         </div>
-        <div class="col-sm-2">
         <form method="post" action="{% url 'loginapp:enggimport_xls' %}" enctype="multipart/form-data">
      {% csrf_token %}
+        <div class="col-sm-2">
+
      <input type="file" name="myfile">
-     <button type="submit" class="btn btn-primary btn-block btn-flat">Upload</button>
-   </form>
- </div>
+      </div>
+     <div class="col-sm-2">
+     <button type="submit" class="btn btn-primary btn-block btn-flat">Import</button>
+     </form>
+   </div>
+
+
             <div class="container">
               <div class="register-logo ">
                 <b>Engineers List</b>
@@ -408,13 +413,12 @@
                            <h3 class="box-title">Engineers List</h3>
 
                            <div class="box-tools">
-                             <div class="input-group input-group-sm" style="width: 150px;">
+                             <form method="GET" action="">
+                          <div class="input-group input-group-sm" style="width: 150px;">
 
-                               <input type="text" name="table_search" class="form-control pull-right" placeholder="Search">
-
-                               <div class="input-group-btn">
-                                 <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
-                               </div>
+                            <input type="text" name="q" class="form-control pull-right" placeholder="Search">
+                            <div class="input-group-btn">
+                              <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>                               </div>
                              </div>
                            </div>
                          </div>
