--- a/dccwebproject/loginapp/templates/loginapp/engglist.html
+++ b/dccwebproject/loginapp/templates/loginapp/engglist.html
@@ -324,7 +324,7 @@
             <i class="fa fa-files-o"></i> <span>Engineers List</span>
           </a>
         </li>
-      
+
 
         <li>
         <a href="{% url 'loginapp:getcalllist' %}">
@@ -389,7 +389,7 @@
                                 <form method="GET" action="">
                              <div class="input-group input-group-sm" style="width: 150px;">
 
-                               <input type="text" name="q" class="form-control pull-right" placeholder="Search">
+                               <input type="text" name="q" value="{{request.GET.q}}" class="form-control pull-right" placeholder="Search">
                                <div class="input-group-btn">
                                  <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
                                </div>
