--- a/dccwebproject/loginapp/templates/loginapp/calllist.html
+++ b/dccwebproject/loginapp/templates/loginapp/calllist.html
@@ -313,11 +313,6 @@
           </a>
           </li>
           <li>
-            <a href="{% url 'loginapp:regcustom' %}">
-          <i class="fa fa-files-o"></i> <span>Add Customer</span>
-        </a>
-          </li>
-          <li>
           <a href="{% url 'loginapp:enggmap' %}">
             <i class="fa fa-files-o"></i> <span>Track Engineers</span>
           </a>
@@ -327,11 +322,6 @@
           <a href="{% url 'loginapp:getengg' %}">
             <i class="fa fa-files-o"></i> <span>Engineers List</span>
           </a>
-        </li>
-        <li>
-        <a href="{% url 'loginapp:getcustomer' %}">
-          <i class="fa fa-files-o"></i> <span>Customer List</span>
-        </a>
         </li>
 
         <li class="active">
@@ -393,13 +383,15 @@
                            <h3 class="box-title">Call List</h3>
 
                            <div class="box-tools">
+                             <form method="GET" action="">
                              <div class="input-group input-group-sm" style="width: 150px;">
-                               <input type="text" name="table_search" class="form-control pull-right" placeholder="Search">
+                               <input type="text" name="q" value="{{request.GET.q}}" class="form-control pull-right" placeholder="Search">
 
                                <div class="input-group-btn">
                                  <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
                                </div>
                              </div>
+                           </form>
                            </div>
                          </div>
                          <!-- /.box-header -->
