--- a/dccwebproject/loginapp/templates/loginapp/calllist1.html
+++ b/dccwebproject/loginapp/templates/loginapp/calllist1.html
@@ -407,16 +407,19 @@
       <div class="col-sm-2">
         <a href ="{% url 'loginapp:callallocateexport_xls'%}"><button type="submit" class="btn btn-primary btn-block btn-flat">export to excel</button></a>
         </div>
-        <div class="col-sm-2">
         <form method="post" action="{% url 'loginapp:callallocateimport_xls' %}" enctype="multipart/form-data">
      {% csrf_token %}
-     <input type="file" name="myfile">
+        <div class="col-sm-4">
+     <input type="file" name="myfile" class="btn btn-primary btn-block btn-flat">
+        </div>
+     <div class="col-sm-2">
      <button type="submit" class="btn btn-primary btn-block btn-flat">Upload</button>
-   </form>
  </div>
+ </form>
             <div class="container">
               <div class="row">
                 <div class="register-logo ">
+                  <br/>
                   <b>All Call Allocation List</b>
                 </div>
                      <div class="col-xs-12">
@@ -425,13 +428,15 @@
                            <h3 class="box-title">Call List</h3>
 
                            <div class="box-tools">
+                             <form method="GET" action="">
                              <div class="input-group input-group-sm" style="width: 150px;">
-                               <input type="text" name="table_search" class="form-control pull-right" placeholder="Search">
+                               <input type="text" name="q" value="{{request.GET.q}}" class="form-control pull-right" placeholder="Search">
 
                                <div class="input-group-btn">
                                  <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
                                </div>
                              </div>
+                           </form>
                            </div>
                          </div>
                          <!-- /.box-header -->
