--- a/dccwebproject/loginapp/templates/loginapp/customerlist1.html
+++ b/dccwebproject/loginapp/templates/loginapp/customerlist1.html
@@ -415,13 +415,15 @@
                            <h3 class="box-title">Customer List</h3>
 
                            <div class="box-tools">
+                             <form method="GET" action="">
                              <div class="input-group input-group-sm" style="width: 150px;">
-                               <input type="text" name="table_search" class="form-control pull-right" placeholder="Search">
+                               <input type="text" name="q" value="{{request.GET.q}}" class="form-control pull-right" placeholder="Search">
 
                                <div class="input-group-btn">
                                  <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
                                </div>
                              </div>
+                           </form>
                            </div>
                          </div>
                          <!-- /.box-header -->
