--- a/dccwebproject/loginapp/templates/loginapp/engglist1.html
+++ b/dccwebproject/loginapp/templates/loginapp/engglist1.html
@@ -392,9 +392,9 @@
         </div>
         <form method="post" action="{% url 'loginapp:enggimport_xls' %}" enctype="multipart/form-data">
      {% csrf_token %}
-        <div class="col-sm-2">
+        <div class="col-sm-4">
 
-     <input type="file" name="myfile">
+     <input type="file" name="myfile" class="btn btn-primary btn-block btn-flat">
       </div>
      <div class="col-sm-2">
      <button type="submit" class="btn btn-primary btn-block btn-flat">Import</button>
@@ -404,6 +404,7 @@
 
             <div class="container">
               <div class="register-logo ">
+                <br/>
                 <b>Engineers List</b>
               </div>
               <div class="row">
@@ -416,10 +417,11 @@
                              <form method="GET" action="">
                           <div class="input-group input-group-sm" style="width: 150px;">
 
-                            <input type="text" name="q" class="form-control pull-right" placeholder="Search">
+                            <input type="text" name="q" value="{{request.GET.q}}" class="form-control pull-right" placeholder="Search">
                             <div class="input-group-btn">
                               <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>                               </div>
                              </div>
+                           </form>
                            </div>
                          </div>
                          <!-- /.box-header -->
@@ -446,6 +448,7 @@
                                <td><span class="label label-success">{{list.engg_status}}</span></td>
                                <td>{{list.engg_address}}</td>
                                <td><a href="{% url 'loginapp:enggupdates' list.id %}">update</a></td>
+                               <td><a href="{% url 'loginapp:enggtrack' list.engg_id %}">track</a></td>
                              </tr>
                                  {%endfor%}
                            </table>
