--- a/dccwebproject/loginapp/templates/loginapp/login.html
+++ b/dccwebproject/loginapp/templates/loginapp/login.html
@@ -29,11 +29,32 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
+        <style>
+        body, html {
+            height: 100%;
+            margin: 0;
+        }
+
+.bg {
+    /* The image used */
+    background-image: url("{% static 'loginapp/dist/img/dcc-logo.jpg' %}");
+
+    /* Full height */
+    height:  100%;
+
+
+    /* Center and scale the image nicely */
+    background-position:  center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+</style>
     </head>
     <body>
+        <div class="container bg">
 
-        <div class="container">
             <div class="row">
+
                 <div class="col-md-4 col-md-offset-4">
                     <div class="login-panel panel panel-default">
                         <div class="panel-heading">
@@ -45,10 +66,10 @@
                                   {% csrf_token %}
 
                                     <div class="form-group">
-                                        <input class="form-control" placeholder="username" name="username" type="text" autofocus>
+                                        <input class="form-control" placeholder="username" required="true" name="username" type="text" autofocus>
                                     </div>
                                     <div class="form-group">
-                                        <input class="form-control" placeholder="Password" name="password" type="password" value="">
+                                        <input class="form-control" placeholder="Password" required="true" name="password" type="password" value="">
                                     </div>
                                     <div class="form-group">
                                         <input class="form-control" placeholder="city" name="city" type="text" value="">
@@ -62,6 +83,20 @@
                                     <input type="submit" value="login">
                                 </fieldset>
                             </form>
+                            {% if form.errors %}
+    {% for field in form %}
+        {% for error in field.errors %}
+            <div class="alert alert-danger">
+                <strong>{{ error|escape }}</strong>
+            </div>
+        {% endfor %}
+    {% endfor %}
+    {% for error in form.non_field_errors %}
+        <div class="alert alert-danger">
+            <strong>{{ error|escape }}</strong>
+        </div>
+    {% endfor %}
+{% endif %}
                         </div>
                     </div>
                 </div>
