--- a/dccwebproject/loginapp/templates/loginapp/index.html
+++ b/dccwebproject/loginapp/templates/loginapp/index.html
@@ -365,14 +365,15 @@
   <i class="fa fa-files-o"></i> <span>Call Allocation</span>
 </a>
 </li>
+<li>
+<a href="{% url 'loginapp:productsave' %}">
+  <i class="fa fa-files-o"></i> <span>Products</span>
+</a>
+</li>
 
         <li>
           <a href="{% url 'loginapp:calendars' %}">
             <i class="fa fa-calendar"></i> <span>Calendar</span>
-            <span class="pull-right-container">
-              <small class="label pull-right bg-red">3</small>
-              <small class="label pull-right bg-blue">17</small>
-            </span>
           </a>
         </li>
         <li>
